--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="css.css" />
+        <script src="app.js"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Számológép</title>
-        <link rel="stylesheet" href="css.css" />
-       
+        <title>Piller András</title>
     </head>
     <body>
         <main>
@@ -28,7 +28,7 @@
                     <button id="torles">C</button>
                 </section>
             </article>
-            <footer>Saját név</footer>
+            <footer>@ Piller András</footer>
         </main>
     </body>
 </html>
